add remove button for plans of action

--- a/src/routes/EditPlansOfAction/EditPlansOfAction.module.scss
+++ b/src/routes/EditPlansOfAction/EditPlansOfAction.module.scss
@@ -63,6 +63,12 @@
           border-color: $sq_dark_gray;
         }
       }
+
+      button {
+        background-color: #f7f7f7;
+        border: none;
+        cursor: pointer;
+      }
     }
 
     select {
