working on feedbacks and fixed star picker

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,8 +1,10 @@
-$sq_black : #393838;
-$sq_red : #EA596E;
-$sq_cream : #F7F7F7;
-$sq_dark_gray : #646464;
-$sq_light_gray : #AFAFAF;
-$sq_orange: #E69845;
-$sq_green: #4EB464;
-$sq_teal: #00B6DE;
+$sq_black: #393838;
+// $sq_red : #EA596E;
+// $sq_red: #e13e52;
+$sq_red: #ff4e64;
+$sq_cream: #f7f7f7;
+$sq_dark_gray: #646464;
+$sq_light_gray: #afafaf;
+$sq_orange: #e69845;
+$sq_green: #4eb464;
+$sq_teal: #00b6de;
