--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -31,11 +31,11 @@
   }
 
   button.primary {
-    background-color: #ea596e;
+    background-color: $sq_red;
   }
 
   button.default {
-    background-color: #393838;
+    background-color: $sq_black;
   }
 
   .Icon {
