--- a/src/routes/mentor/YourMentees/YourMentees.module.scss
+++ b/src/routes/mentor/YourMentees/YourMentees.module.scss
@@ -26,6 +26,10 @@
       z-index: 10 !important;
     }
   }
+
+  .picker {
+    height: 20px !important;
+  }
   .active button {
     background-color: red !important;
   }
