--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -19,6 +19,7 @@
     padding: 10px 20px;
     border: none;
     white-space: nowrap;
+    gap: 20px;
 
     &:hover,
     &:focus-visible {
@@ -43,7 +44,6 @@
     height: 100%;
   }
   .Description {
-    margin-left: 20px;
     display: flex;
   }
 }
