system messages + feedback on meetings

--- a/src/components/UI/ContentCard/ContentCard.module.scss
+++ b/src/components/UI/ContentCard/ContentCard.module.scss
@@ -1,6 +1,7 @@
 @import "../../../variables";
 
 .ContentCard {
+  margin-bottom: 30px;
   &:hover,
   &:focus-visible {
     outline: 3px solid $sq_dark_gray;
