--- a/src/components/UI/PagePicker/PagePicker.module.scss
+++ b/src/components/UI/PagePicker/PagePicker.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 50px;
   //   border-top: 1px solid $sq_light_gray;
   //   border-bottom: 1px solid $sq_light_gray;
   position: relative;
