--- a/src/routes/Dashboard/Dashboard.module.scss
+++ b/src/routes/Dashboard/Dashboard.module.scss
@@ -6,8 +6,12 @@
 @import "../../variables";
 
 .Section {
+  .Buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
   button {
-    margin: 40px 0;
     height: 40px;
   }
   margin: 10px 0 60px 0;
@@ -35,6 +39,53 @@
   }
 }
 
+@media (min-width: 600px) {
+  .Section {
+    .Buttons {
+      flex-direction: row;
+      gap: 40px;
+      flex-wrap: wrap;
+    }
+  }
+
+  .Switch {
+    .Button {
+      & > button {
+        padding: 10px !important;
+        & > div {
+          font-size: 15px !important;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 800px) {
+  .Switch {
+    justify-content: center !important;
+    gap: 40px;
+
+    .Button {
+      & > button {
+        flex-direction: row !important;
+        gap: 15px;
+        & > div {
+          font-size: 15px !important;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+}
+
+@media (min-width: 1500px) {
+}
+
+@media (min-width: 2000px) {
+}
+
 .SwitchWrapper {
   width: 100%;
 }
@@ -48,21 +99,29 @@
   border-top: 1px solid #c1c1c1;
   color: black;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 10px 20px;
-  gap: 25px;
-  overflow: scroll;
+
   .Button {
     width: fit-content;
     margin: 0;
     background-color: transparent;
+    box-sizing: border-box;
 
     &.selected > button {
-      border-color: $sq_red;
+      outline: 2px solid $sq_red;
     }
 
     & > button {
-      border: 2px solid white;
+      outline: 2px solid transparent;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0;
+      padding: 10px;
+      & > div {
+        margin: 2px 0;
+        font-size: 10px;
+      }
     }
   }
 }
