--- a/src/routes/Dashboard/Dashboard.module.scss
+++ b/src/routes/Dashboard/Dashboard.module.scss
@@ -6,12 +6,8 @@
 @import "../../variables";
 
 .Section {
-  .Buttons {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
   button {
+    margin: 40px 0;
     height: 40px;
   }
   margin: 10px 0 60px 0;
@@ -39,53 +35,6 @@
   }
 }
 
-@media (min-width: 600px) {
-  .Section {
-    .Buttons {
-      flex-direction: row;
-      gap: 40px;
-      flex-wrap: wrap;
-    }
-  }
-
-  .Switch {
-    .Button {
-      & > button {
-        padding: 10px !important;
-        & > div {
-          font-size: 15px !important;
-        }
-      }
-    }
-  }
-}
-
-@media (min-width: 800px) {
-  .Switch {
-    justify-content: center !important;
-    gap: 40px;
-
-    .Button {
-      & > button {
-        flex-direction: row !important;
-        gap: 15px;
-        & > div {
-          font-size: 15px !important;
-        }
-      }
-    }
-  }
-}
-
-@media (min-width: 1200px) {
-}
-
-@media (min-width: 1500px) {
-}
-
-@media (min-width: 2000px) {
-}
-
 .SwitchWrapper {
   width: 100%;
 }
@@ -99,28 +48,57 @@
   border-top: 1px solid #c1c1c1;
   color: black;
   display: flex;
-  justify-content: space-evenly;
-  padding: 10px 20px;
+  justify-content: space-between;
 
-  .Button {
-    width: fit-content;
-    margin: 0;
-    background-color: transparent;
-    box-sizing: border-box;
-
-    &.selected > button {
-      outline: 2px solid $sq_red;
-    }
-
-    & > button {
-      outline: 2px solid transparent;
-      flex-direction: column;
-      justify-content: center;
+  @media screen and (min-width: 800px) {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 20px;
+    gap: 25px;
+    overflow: scroll;
+    .Button {
+      width: fit-content;
       margin: 0;
-      padding: 10px;
-      & > div {
-        margin: 2px 0;
-        font-size: 10px;
+      background-color: transparent;
+
+      &.selected > button {
+        border-color: $sq_red;
+      }
+
+      & > button {
+        border: 2px solid white;
+      }
+    }
+  }
+
+  @media screen and (max-width: 799px) {
+    gap: 1rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+
+    .Button {
+      width: 100%;
+      height: initial;
+      background-color: transparent;
+
+      &.selected > button {
+        outline: 4px solid $sq_red;
+      }
+
+      & > button {
+        flex-direction: column;
+        height: initial;
+        gap: 5px;
+        padding: 5px;
+        font-size: 14px;
+        width: 100%;
+        white-space: normal;
+
+        // since the icon is always first, use this to target twemoji
+        :first-child {
+          width: 30px;
+          height: 30px;
+        }
       }
     }
   }
